ajust with setInterval and select card

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src = "https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js" ></script>
 
 </head>
 <body>
@@ -29,7 +28,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves"></span> Moves
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -38,8 +37,7 @@
 
         <ul class="deck">
             <li class="card">
-                <i class="fa fa-diamond back"></i>
-                <i class= "fa fa-diamond front"></i>
+                <i class="fa fa-diamond"></i> 
             </li>
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
@@ -53,7 +51,7 @@
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card unmatch">
+            <li class="card">
                 <i class="fa fa-anchor"></i>
             </li>
             <li class="card">
