--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css">
+
 
 </head>
 <body>
@@ -87,7 +90,20 @@
         </ul>
     </div>
 
-    <script src="js/app.js"></script>
+    <div id="modal1" class="modal">
+       <div>
+            <div class="modal-body">
+                <p>Parabéns,Você Ganhou!!</p>
+                <p>Com <span class="moves"></span> movimentos, você terminou o jogo.</p>
+                <p>Boa!</p>
+            </div>
+            <div class="modal-footer">
+                <button id="button1" type="button" class=".restart">Jogar Denovo!</button>
+            </div>
+        </div> 
+    </div>
 
+    <script src="js/app.js"></script>
+    
 </body>
 </html>
