--- a/index.html
+++ b/index.html
@@ -40,52 +40,52 @@
 
         <ul class="deck">
             <li class="card">
-                <i class="fa fa-diamond"></i> 
+                <i></i> 
             </li>
             <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-anchor"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-bolt"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-cube"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-anchor"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-leaf"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-bicycle"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-diamond"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-bomb"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-leaf"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-bomb"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-bolt"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-bicycle"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
+                <i></i>
             </li>
             <li class="card">
-                <i class="fa fa-cube"></i>
+                <i></i>
             </li>
         </ul>
     </div>
@@ -98,7 +98,7 @@
                 <p>Boa!</p>
             </div>
             <div class="modal-footer">
-                <button id="button1" type="button" class=".restart">Jogar Denovo!</button>
+                <button id="button1" type="button" class="restart">Jogar Denovo!</button>
             </div>
         </div> 
     </div>
