--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
+
     <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css">
 
@@ -90,14 +92,13 @@
         </ul>
     </div>
 
-    <div id="modal1" class="modal">
+    <div id="myModal" class="modal">
        <div>
             <div class="modal-body">
                 <p>Parabéns,Você Ganhou!!</p>
-                <p>Com <span class="moves"></span> movimentos, você terminou o jogo.</p>
+                <p>Com <span class="moves"></span> movimentos e ganhou  <span class="nstar"></span> estrelas, você terminou o jogo em <span class="temp"></span> segundos.</p>
                 <p>Boa!</p>
-            </div>
-            <div class="modal-footer">
+
                 <button id="button1" type="button" class="restart">Jogar Denovo!</button>
             </div>
         </div> 
@@ -107,3 +108,4 @@
     
 </body>
 </html>
+
